--- a/client/src/shared/search-bar.css
+++ b/client/src/shared/search-bar.css
@@ -1,30 +1,43 @@
-.search__bar{
-    padding: 0.5rem 0.5rem;
+.search__bar {
+    padding: 0.5rem 1rem;
     border-radius: 50px;
-    box-shadow: rgba(17,12,46,0.15) 0px 48px 100px 0px;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
     width: max-content;
     margin-top: 50px;
 }
-.form__group span{
+.form__group span {
     font-size: 1.8rem;
     color: #ee6e6e;
 }
-.form__group input{
+.form__group input {
     border: none;
     font-size: 0.9rem;
     color: var(--heading-color);
 }
-.form__group input:focus{
+.form__group input:focus {
     outline: none;
 }
-.form__group-fast{
+.form__group-fast {
     border-right: 2px solid #ddd;
 }
-.search__icon i{
+.search__icon i {
     font-size: 1.6rem;
     padding: 0.2rem;
     background: var(--secondary-color);
     color: #fff;
     border-radius: 10px 5px 10px 5px;
     cursor: pointer;
+}
+@media only screen and (max-width:992px) {
+    .search__bar {
+        width: 100%;
+    }
+
+    .search__bar form {
+        flex-wrap: wrap;
+    }
+
+    .search__bar form .form__group {
+        width: 48%;
+    }
 }
