--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -60,3 +60,23 @@
     font-weight: 700;
     text-decoration: none;
 }
+@media only screen and (max-width:768px) {
+    .login__img {
+        display: none;
+    }
+
+    .login__form {
+        width: 70%;
+        margin: auto;
+    }
+
+    .login__container {
+        padding-bottom: 3rem;
+    }
+}
+
+@media only screen and (max-width:580px) {
+    .login__form {
+        width: 100%;
+    }
+}
